Added main content area container, added margin bottom on nav, added notes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <title>About | Jeff McLean Portfolio</title>
 </head>
-<body>
+<body style="background-image: url(assets/images/funky-lines.png); background-repeat: repeat;">
 
     <!-- Navigation Bar-->
-    <nav class="navbar navbar-expand-md bg-light navbar-light" id="mainNav">
+    <nav class="navbar navbar-expand-md bg-light navbar-light mb-4" id="mainNav">
             <div class="container">
               <a class="navbar-brand" href="#">Jeff McLean</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,22 +20,32 @@
               <div class="collapse navbar-collapse align-items-center" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto align-items-center">
                   <li class="nav-item">
-                    <a class="nav-link" href="">About</a>
+                    <a class="nav-link" href="index.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                   </li>
           
                   <li class="nav-item">
-                    <a class="nav-link" href="">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
     
+    <!-- Main Content Area-->
+      <div class="container" style="background-color: white;">
+
+          <div class="row">
+              <div class="col mt-4">
+                <h3 class="text-warning">About Me</h3>
+                <hr>
+              </div>
+         </div>
 
 
+      </div>
 
 
     <!--Footer-->
