--- a/index.html
+++ b/index.html
@@ -38,9 +38,24 @@
       <div class="container" style="background-color: white;">
 
           <div class="row">
-              <div class="col mt-4">
+              <div class="col mt-4 pb-3">
+
+                <!-- Content Title-->
                 <h3 class="text-warning">About Me</h3>
                 <hr>
+
+                <!-- Text and Image-->
+                <picture>
+                  <img src="assets/images/Jeff_McLean.PNG" class="img-fluid rounded float-left mr-3" style="max-width:200px; height:auto;">
+                </picture>
+
+                <p>My name is Jeffrey McLean, I am from the Boston area originally, so naturally I live by the 3 B's ... Bird, Belichick, Brady.... but am now a permanent resident of Del Mar, CA. </p>
+               <p>I ❤ digital marketing.</p>
+               <p>I love helping people, and brands, with their digital marketing. Whether you need: a Website Developed, someone to run your Paid Search campaigns, a new set of eyes on your Social Media Marketing, or want to start running Paid Social ads for your business. I can do it all.</p> 
+               <p>Don't know what you need? I would love to sit down with you as a Digital Consultant and help you put together a strategy.</p>
+               <p>Feel free to reach out via the contact page, on LinkedIn, at my website below, or through email: <a href="mailto:jeff@jeffreymclean.com">jeff@jeffreymclean.com</a></p>
+               <p><a href="http://JeffreyMcLean.com" target="_blank">JeffreyMclean.com</a> </p>
+
               </div>
          </div>
 
