--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body style="background-image: url(assets/images/funky-lines.png); background-repeat: repeat;">
 
     <!-- Navigation Bar-->
-    <nav class="navbar navbar-expand-md bg-light navbar-light mb-4" id="mainNav">
+    <nav class="navbar navbar-expand-md bg-light navbar-light mb-4 p-0 border-bottom border-dark id="mainNav">
             <div class="container">
-              <a class="navbar-brand" href="#">Jeff McLean</a>
+              <a class="navbar-brand text-light bg-warning p-2" href="index.html"><h2>Jeff McLean</h2></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -64,7 +64,7 @@
 
 
     <!--Footer-->
-    <footer id="sticky-footer" class="py-4 bg-dark text-white-50 fixed-bottom">
+    <footer id="sticky-footer" class="py-4 bg-dark text-white-50 fixed-bottom border-top border-warning" style="border-width:4px !important;">
             <div class="container text-center">
               <small>Copyright &copy; 2019</small>
             </div>
