Added form with bootstrap. Updated page titles

--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,30 @@
                 <hr>
 
                 <!-- Form-->
+
+                <form>
+                        <!-- Name Field-->
+                        <div class="form-group">
+                            <label for="nameField">Name</label>
+                            <input type="text" class="form-control" id="fullNameField" placeholder="Full Name">
+                        </div>
+
+                        <!-- Email Field-->
+                        <div class="form-group">
+                          <label for="exampleInputEmail1">Email address</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                          <small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
+                        </div>
+
+                        <!-- Message Field-->
+                        <div class="form-group">
+                            <label for="nameField">Message</label>
+                            <textarea class="form-control rounded-0" id="exampleFormControlTextarea1" rows="7"></textarea>
+                        </div>
+
+                         <!-- Button-->
+                        <button type="submit" class="btn btn-primary btn-lg btn-warning">Submit</button>
+                      </form>
                 
 
               </div>
