--- a/portfolio.html
+++ b/portfolio.html
@@ -89,12 +89,12 @@
         <!-- Row 1-->
         <div class="row">
                 <div class="col-sm mb-2 cellBlock">
-                        <img class="rounded fullW" src="http://fpoimg.com/300x300?text=Advertisement">
-                        <div class="textOverlay">Example Item</div>
+                        <a href="https://jmmarketing.github.io/Psychic-Game/"><img class="rounded fullW" src="assets/images/psychic-game.jpg"></a>
+                        <div class="textOverlay">Psychic Game</div>
                 </div>
                 <div class="col-sm mb-2">
-                        <img class="rounded fullW" src="http://fpoimg.com/300x300?text=Advertisement">
-                        <div class="textOverlay">Example Item</div>
+                    <a href="https://jmmarketing.github.io/Psychic-Game/"><img class="rounded fullW" src="http://fpoimg.com/300x300?text=Advertisement"></a>
+                        <div class="textOverlay">Crystal Collector</div>
                 </div>
                 <div class="col-sm mb-2">
                   
