Added new image, made links open in new window

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,11 +89,11 @@
         <!-- Row 1-->
         <div class="row">
                 <div class="col-sm mb-2 cellBlock">
-                        <a href="https://jmmarketing.github.io/Psychic-Game/"><img class="rounded fullW" src="assets/images/psychic-game.jpg"></a>
+                        <a href="https://jmmarketing.github.io/Psychic-Game/" target="_blank"><img class="rounded fullW" src="assets/images/psychic-game.jpg"></a>
                         <div class="textOverlay">Psychic Game</div>
                 </div>
                 <div class="col-sm mb-2">
-                    <a href="https://jmmarketing.github.io/Psychic-Game/"><img class="rounded fullW" src="http://fpoimg.com/300x300?text=Advertisement"></a>
+                    <a href="https://jmmarketing.github.io/unit-4-game/" target="_blank"><img class="rounded fullW" src="assets/images/crystal-game.jpg"></a>
                         <div class="textOverlay">Crystal Collector</div>
                 </div>
                 <div class="col-sm mb-2">
