Added Celtics trivia to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -104,8 +104,8 @@
         <!-- Row 2-->
         <div class="row">
                 <div class="col-sm mb-2">
-                        <img class="rounded fullW" src="http://fpoimg.com/300x300?text=Advertisement">
-                        <div class="textOverlay">Example Item</div>
+                        <img class="rounded fullW" src="assets/images/celtics.jpg">
+                        <div class="textOverlay">Celtics Trivia</div>
                 </div>
                 <div class="col-sm mb-2">
                         <img class="rounded fullW" src="http://fpoimg.com/300x300?text=Advertisement">
