Added links to Celtics trivia

--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
         <!-- Row 2-->
         <div class="row">
                 <div class="col-sm mb-2">
-                        <img class="rounded fullW" src="assets/images/celtics.jpg">
+                    <a href="https://jmmarketing.github.io/TriviaGame/index.html" target="_blank"><img class="rounded fullW" src="assets/images/celtics.jpg"></a>
                         <div class="textOverlay">Celtics Trivia</div>
                 </div>
                 <div class="col-sm mb-2">
