Added new Train Scheduler to Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -108,8 +108,8 @@
                         <div class="textOverlay">Celtics Trivia</div>
                 </div>
                 <div class="col-sm mb-2">
-                        <img class="rounded fullW" src="http://fpoimg.com/300x300?text=Advertisement">
-                        <div class="textOverlay">Example Item</div>
+                    <a href="https://jmmarketing.github.io/Train-Scheduler/" target="_blank"><img class="rounded fullW" src="assets/images/train.jpg"></a>
+                    <div class="textOverlay">Basic Train Scheduler</div>
                 </div>
                 <div class="col-sm mb-2">
                   
