Added New Porfolio Item

--- a/portfolio.html
+++ b/portfolio.html
@@ -119,8 +119,8 @@
         <!-- Row 3-->
         <div class="row">
                 <div class="col-sm mb-2">
-                        <img class="rounded fullW" src="http://fpoimg.com/300x300?text=Advertisement">
-                        <div class="textOverlay">Example Item</div>
+                    <a href="https://ghawthorne66.github.io/movie-search-app/" target="_blank"><img class="rounded fullW" src="assets/images/movie-search.jpg">
+                        <div class="textOverlay">The Movie Search</div>
                 </div>
                 <div class="col-sm mb-2">
                  
