--- a/portfolio.html
+++ b/portfolio.html
@@ -119,7 +119,7 @@
         <!-- Row 3-->
         <div class="row">
                 <div class="col-sm mb-2">
-                    <a href="https://ghawthorne66.github.io/movie-search-app/" target="_blank"><img class="rounded fullW" src="assets/images/movie-search.jpg">
+                    <a href="https://ghawthorne66.github.io/movie-search-app/" target="_blank"><img class="rounded fullW" src="assets/images/movie-search.jpg"></a>
                         <div class="textOverlay">The Movie Search</div>
                 </div>
                 <div class="col-sm mb-2">
