Updated about me page with ways to connect

--- a/index.html
+++ b/index.html
@@ -1,81 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>About | Jeff McLean Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
+  <title>About | Jeff McLean Portfolio</title>
 </head>
-<body class="position-relative" style="background-image: url(assets/images/funky-lines.png); background-repeat: repeat; min-height:100vh; padding-bottom:100px;">
 
-    <!-- Navigation Bar-->
-    <nav class="navbar navbar-expand-md bg-light navbar-light mb-4 p-0 border-bottom border-dark sticky-top" id="mainNav">
-            <div class="container">
-              <a class="navbar-brand text-light bg-warning p-2" href="index.html"><h2>Jeff McLean</h2></a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse align-items-center" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto align-items-center">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                  </li>
-          
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    
-    <!-- Main Content Area-->
-      <div class="container" style="background-color: white;">
+<body class="position-relative"
+  style="background-image: url(assets/images/funky-lines.png); background-repeat: repeat; min-height:100vh; padding-bottom:100px;">
 
-          <div class="row">
-              <div class="col mt-4 pb-3">
+  <!-- Navigation Bar-->
+  <nav class="navbar navbar-expand-md bg-light navbar-light mb-4 p-0 border-bottom border-dark sticky-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand text-light bg-warning p-2" href="index.html">
+        <h2>Jeff McLean</h2>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse align-items-center" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto align-items-center">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
 
-                <!-- Content Title-->
-                <h3 class="text-warning">About Me</h3>
-                <hr>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-                <!-- Text and Image-->
-                <picture>
-                  <img src="assets/images/Jeff_McLean.PNG" class="img-fluid rounded float-left mr-3" style="max-width:200px; height:auto;">
-                </picture>
+  <!-- Main Content Area-->
+  <div class="container" style="background-color: white;">
 
-                <p>My name is Jeffrey McLean, I am from the Boston area originally, so naturally I live by the 3 B's ... Bird, Belichick, Brady.... but am now a permanent resident of Del Mar, CA. </p>
-               <p>I ❤ digital marketing.</p>
-               <p>I love helping people, and brands, with their digital marketing. Whether you need: a Website Developed, someone to run your Paid Search campaigns, a new set of eyes on your Social Media Marketing, or want to start running Paid Social ads for your business. I can do it all.</p> 
-               <p>Don't know what you need? I would love to sit down with you as a Digital Consultant and help you put together a strategy.</p>
-               <p>Feel free to reach out via the contact page, on LinkedIn, at my website below, or through email: <a href="mailto:jeff@jeffreymclean.com">jeff@jeffreymclean.com</a></p>
-               <p><a href="http://JeffreyMcLean.com" target="_blank">🔗JeffreyMclean.com</a> </p>
+    <div class="row">
+      <div class="col mt-4 pb-3">
 
-              </div>
-         </div>
+        <!-- Content Title-->
+        <h3 class="text-warning">About Me</h3>
+        <hr>
 
+        <!-- Text and Image-->
+        <picture>
+          <img src="assets/images/Jeff_McLean.PNG" class="img-fluid rounded float-left mr-3"
+            style="max-width:200px; height:auto;">
+        </picture>
+
+        <p>My name is Jeffrey McLean, I am from the Boston area originally, so naturally I live by the 3 B's ... Bird,
+          Belichick, Brady.... but am now a permanent resident of Del Mar, CA. </p>
+        <p>I ❤ digital marketing.</p>
+        <p>I love helping people, and brands, with their digital marketing. Whether you need: a Website Developed,
+          someone to run your Paid Search campaigns, a new set of eyes on your Social Media Marketing, or want to start
+          running Paid Social ads for your business. I can do it all.</p>
+        <p>Don't know what you need? I would love to sit down with you as a Digital Consultant and help you put together
+          a strategy.</p>
+        <p>Feel free to reach out via the contact page, on LinkedIn, at my website below, or through email: <a
+            href="mailto:jeff@jeffreymclean.com">jeff@jeffreymclean.com</a></p>
+        <h4>Connect With Me:</h4>
+        <p><a href="http://JeffreyMcLean.com" target="_blank">🔗 JeffreyMclean.com</a> </p>
+        <p><a href="https://www.linkedin.com/in/jeffreymclean22/" target="_blank"><i class="fab fa-linkedin"></i> Connect On LinkedIn</a> </p>
+        <p><a href="https://github.com/jmmarketing" target="_blank"><i class="fab fa-github"></i> Follow My GitHub</a> </p>
+        <p><a href="mailto:jeff@jeffreymclean.com" target="_blank"><i class="fas fa-envelope-open-text"></i> Email Me</a> </p>
 
       </div>
+    </div>
 
 
-    <!--Footer-->
-    <footer id="sticky-footer" class="py-4 bg-dark text-white-50 position-absolute border-top border-warning "
-        style="border-width:4px !important; bottom:0; width:100%;">
-            <div class="container text-center">
-              <small>Copyright &copy; 2019</small>
-            </div>
-    </footer>
+  </div>
 
 
-<!-- Javascript References-->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <!--Footer-->
+  <footer id="sticky-footer" class="py-4 bg-dark text-white-50 position-absolute border-top border-warning "
+    style="border-width:4px !important; bottom:0; width:100%;">
+    <div class="container text-center">
+      <small>Copyright &copy; 2019</small>
+    </div>
+  </footer>
+
+
+  <!-- Javascript References-->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
